--- a/public/styles.css
+++ b/public/styles.css
@@ -3,6 +3,13 @@ video {
     width: 100%;
 }
 
+nav {
+    background-color: #000000;
+}
+
+.colorpick {
+    height: 100%;
+}
 
 #whiteboard-container video {
     display: block;
@@ -17,7 +24,19 @@ video {
     background-color: white;
 }
 
-.participantDiv{
+.participantDiv {
     height: 50%;
     width: 100%;
+}
+
+.webcam-feed-col {
+    height: 80vh;
+}
+
+#webcam-feed-container {
+    height: 80vh;
+}
+
+.container-canvas-webcam {
+    height: 100vh;
 }
